# pylamine

./: Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  python-tests.yaml  rust-tests.yaml
pylamine/: __init__.py  error.py  io.py  type.py
python/: __init__.py  pylamine.pyi
src/: lib.rs  parse.rs  utils.rs
tests/: __init__.py  conftest.py  test_base.py  test_buffer_strategy.py  test_version.py  utils.py
tests/data/: df.xlsx
