[package]
name = "pylamine"
version = "0.2.1"
authors = ["Chris <cnpryer@gmail.com>"]
description = "Python bindings for Calamine."
edition = "2018"
homepage = "https://github.com/cnpryer/pylamine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cnpryer/pylamine.git"

[lib]
name = "pylamine"
crate-type = ["cdylib"]

[dependencies]
calamine = {git = "https://github.com/cnpryer/calamine", rev = "d1c50bcfab668c029e79635b1c4599c0cf64ae5d", features = ["dates"]}
pyo3 = {version = "^0.16.5", features = ["extension-module"] }
chrono = { version = "0.4.17", features = ["serde"] }

[build-dependencies]
pyo3-build-config =  "^0.16.5"

