[tool.poetry]
name = "pylamine"
version = "0.1.0"
description = "Python bindings for Calamine."
authors = ["Chris Pryer <cnpryer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
maturin = "^0.12.19"
pytest = "^7.1.2"
mypy = "^0.961"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
