[tool.poetry]
name = "pylamine"
version = "0.2.1"
description = "Python bindings for Calamine."
authors = ["Chris Pryer <cnpryer@gmail.com>"]
license = "MIT"
repository = "https://github.com/cnpryer/pylamine.git"
readme = "./README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
maturin = "^0.12.19"
pytest = "^7.1.2"
mypy = "^0.961"
pre-commit = "^2.19.0"
polars = "^0.13.46"
xlsx2csv = "^0.7.8"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line_lenght = 79

[tool.mypy]
ignore_missing_imports = true
# disallow_untyped_defs = true
# warn_unused_ignores = true
# show_error_codes = true
# files = ["pylamine", "tests"]
